# nooshell

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  languages.json  test.ns
config/: languages.json  sh-languages.json
docs/: architecture.md  configuration.md  keybindings.md  passthrough.md  persistence.md  scripting.md  state-bridge.md
scripts/install scripts/unix/: uninstall.sh
scripts/unix/: dev.sh  install.sh  uninstall.sh
scripts/windows/: dev.ps1  install.ps1  uninstall.ps1
src/: app.rs  bridge.rs  compile.rs  config.rs  execution.rs  lib.rs  main.rs  noorc.rs  pane.rs  passthrough.rs  pty.rs  script.rs  shell_resolver.rs  state.rs  store.rs  terminal_bridge.rs
test scripts/: test.ns
