[package]
name = "nooshell"
version = "3.0.1"
edition = "2024"

[[bin]]
name = "noo"
path = "src/main.rs"

[lib]
name = "nooshell"
path = "src/lib.rs"

[dependencies]
crossterm = "0.29.0"
portable-pty = "0.9"
ratatui = "0.30.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
